Alembic export with subdiv_schema crashes Blender #95959

Closed
opened 2022-02-22 16:12:35 +01:00 by Jasper van Nieuwenhuizen · 6 comments

System Information
Operating system: Linux-5.16.9-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits and Windows-10-10.0.19041-SP0
Graphics card: NVIDIA GeForce GT 650M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181 (also broken in 3.1 beta and 3.2 alpha)
Worked: 2.93.8

Short description of error

Blender crashes when exporting an Alembic with apply_subdiv=False and subdiv_schema=True with objects with a subdivision surface modifier.

terminate called after throwing an instance of 'Alembic::Util::v12::Exception'
  what():  OGeomBaseSchema::getArbGeomParams()
ERROR: EXCEPTION:
OCompoundProperty::init()
ERROR: EXCEPTION:
invalid parent

Exact steps for others to reproduce the error

  • Create a cube (or any other mesh object),
  • Add a subdivision surface modifier.
  • In the Alembic Export properties go to Subdivisions and check Use Schema
  • make sure Subdivisons > Apply is unchecked.
    Running the export crashes Blender.
**System Information** Operating system: Linux-5.16.9-200.fc35.x86_64-x86_64-with-glibc2.34 64 Bits and Windows-10-10.0.19041-SP0 Graphics card: NVIDIA GeForce GT 650M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` (also broken in 3.1 beta and 3.2 alpha) Worked: 2.93.8 **Short description of error** Blender crashes when exporting an Alembic with `apply_subdiv=False` and `subdiv_schema=True` with objects with a subdivision surface modifier. ``` terminate called after throwing an instance of 'Alembic::Util::v12::Exception' what(): OGeomBaseSchema::getArbGeomParams() ERROR: EXCEPTION: OCompoundProperty::init() ERROR: EXCEPTION: invalid parent ``` **Exact steps for others to reproduce the error** - Create a cube (or any other mesh object), - Add a subdivision surface modifier. - In the Alembic Export properties go to `Subdivisions` and check `Use Schema` - make sure Subdivisons > Apply is **un**checked. Running the export crashes Blender.

Added subscriber: @jasperge-2

Added subscriber: @jasperge-2

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash.
It was introduced sometime between:
d08cc63e2f (4 May 2021) and
276eebb274 (19 Sep 2021)

crash log:

 	KernelBase.dll!00007ffdcc02478c()	Unknown
 	vcruntime140_1d.dll!00007ffdbc184833()	Unknown
 	vcruntime140_1d.dll!00007ffdbc183a12()	Unknown
 	ntdll.dll!00007ffdce567f56()	Unknown
>	blender.exe!blender::io::alembic::ABCGenericMeshWriter::do_write(blender::io::HierarchyContext & context) Line 201	C++

 	blender.exe!blender::io::alembic::ABCAbstractWriter::write(blender::io::HierarchyContext & context) Line 67	C++
 	blender.exe!blender::io::AbstractHierarchyIterator::make_writer_object_data(const blender::io::HierarchyContext * context) Line 657	C++
 	blender.exe!blender::io::AbstractHierarchyIterator::make_writers(const blender::io::HierarchyContext * parent_context) Line 616	C++
 	blender.exe!blender::io::AbstractHierarchyIterator::iterate_and_write() Line 203	C++
 	blender.exe!blender::io::alembic::ABCHierarchyIterator::iterate_and_write() Line 55	C++
 	blender.exe!blender::io::alembic::export_startjob(void * customdata, short * stop, short * do_update, float * progress) Line 161	C++
 	blender.exe!do_job_thread(void * job_v) Line 385	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 221	C++
 	[External Code]	

I can confirm the crash. It was introduced sometime between: `d08cc63e2f` (4 May 2021) and `276eebb274` (19 Sep 2021) crash log: ``` KernelBase.dll!00007ffdcc02478c() Unknown vcruntime140_1d.dll!00007ffdbc184833() Unknown vcruntime140_1d.dll!00007ffdbc183a12() Unknown ntdll.dll!00007ffdce567f56() Unknown > blender.exe!blender::io::alembic::ABCGenericMeshWriter::do_write(blender::io::HierarchyContext & context) Line 201 C++ blender.exe!blender::io::alembic::ABCAbstractWriter::write(blender::io::HierarchyContext & context) Line 67 C++ blender.exe!blender::io::AbstractHierarchyIterator::make_writer_object_data(const blender::io::HierarchyContext * context) Line 657 C++ blender.exe!blender::io::AbstractHierarchyIterator::make_writers(const blender::io::HierarchyContext * parent_context) Line 616 C++ blender.exe!blender::io::AbstractHierarchyIterator::iterate_and_write() Line 203 C++ blender.exe!blender::io::alembic::ABCHierarchyIterator::iterate_and_write() Line 55 C++ blender.exe!blender::io::alembic::export_startjob(void * customdata, short * stop, short * do_update, float * progress) Line 161 C++ blender.exe!do_job_thread(void * job_v) Line 385 C blender.exe!tslot_thread_start(void * tslot_p) Line 221 C++ [External Code] ```

This issue was referenced by ba274d20b4

This issue was referenced by ba274d20b4f19833e6413fdc7f1bc3a663cc2f8c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-24 02:51:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95959
No description provided.